--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+body, h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -33,7 +38,7 @@
 }
 
 .header__title {
-  width: 730px;
+  max-width: 730px;
   margin-left: 64px;
   display: flex;
   align-items: center;
@@ -44,7 +49,7 @@
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   left: 64px;
   bottom: 30px;
   position: absolute;
@@ -60,8 +65,9 @@
   }
 
 .header__main-illustration {
-  width: 765px;
+  max-width: 765px;
   height: 608px;
+  object-fit: cover;
   z-index: 1;
   position: absolute;
   right: 0;
@@ -85,13 +91,13 @@
 .two-columns {
   display: flex;
   justify-content: space-between;
-  width: 80%;
+  max-width: 80%;
   margin: 100px auto 0;
 }
 
 .two-columns__brief {
   margin: 0;
-  width: 175px;
+  max-width: 175px;
   line-height: 1.2em;
   font-size: 18px;
   font-weight: normal;
@@ -102,7 +108,7 @@
   display:flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 80%;
+  max-width: 80%;
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
@@ -124,7 +130,7 @@
 /* digits {} */
 
 .section-title {
-  width: 60%;
+  max-width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
@@ -133,7 +139,7 @@
 }
 
 .section-subtitle {
-  width: 60%;
+  max-width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
@@ -146,14 +152,14 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  width: 1100px;
+  max-width: 1100px;
   list-style: none;
   padding: 0;
   margin: 0 auto 100px;
 }
 
 .table__cell {
-  width: 250px;
+  max-width: 250px;
 }
 
 .table__heading {
@@ -172,7 +178,7 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   position: relative;
   background-image: url("../images/feynman.png");
   background-size: contain;
@@ -183,7 +189,7 @@
 }
 
 .feynman__title {
-  width: 648px;
+  max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
@@ -219,26 +225,27 @@
 
 .section-title_theme_dark {
   color: white;
-  z-index: 4;
+  position: relative;
+  z-index: 3;
 }
 
 .section-subtitle_theme_dark {
   color: white;
-  z-index: 3;
+  position: relative;
+  z-index: 2;
 }
 
 .table_theme_dark {
-  margin: 0 auto 90px;
-  z-index: 2;
   margin-bottom: 90px;
+  position: relative;
+  z-index: 1;
 }
 
 .table__cell_theme_dark {
-  width: 200px;
+  max-width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 1;
 }
 
 .table__heading_theme_dark {
@@ -272,20 +279,23 @@ margin-top: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 90%;
+  max-width: 90%;
   margin: auto;
   min-height: 250px;
 }
 
-.footer__column_content_copyright {
+.footer__column {
   display: flex;
   flex-direction: column;
+}
+
+.footer__column_content_copyright {
   justify-content: space-between;
   flex-basis: 711px;
 }
 
 .logo_place_footer {
-  width: 228px;
+  max-width: 228px;
   height: 32px;
 }
 
@@ -293,18 +303,14 @@ margin-top: 0;
 line-height: 25px;
 font-size: 18px;
 font-weight: normal;
-margin: 18 0 18;
+margin: 18px 0 18px;
 }
 
 .footer__column_content_info {
-  display: flex;
-  flex-direction: column;
   justify-content: flex-start;
 }
 
 .footer__column_content_social {
-  display: flex;
-  flex-direction: column;
   justify-content: flex-start;
 }
 
@@ -325,10 +331,16 @@ margin: 18 0 18;
   font-size: 18px;
   font-weight: normal;
   text-decoration: none;
+  color: white;
+  text-decoration: none;
+}
+
+.footer__column-link:hover {
+  text-decoration: underline;
 }
 
 .footer__social-icon {
 height: 16px;
-width: 16px;
+max-width: 16px;
 margin-right: 10px;
 }
