--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ body, h1, h2, h3, h4, h5, h6, p {
 }
 
 .table__cell {
-  max-width: 250px;
+  width: 250px;
 }
 
 .table__heading {
@@ -326,6 +326,7 @@ margin: 18px 0 18px;
   font-weight: normal;
   text-decoration: none;
   color: white;
+  text-decoration: none;
 }
 
 .footer__column-link:hover {
