--- a/styles/style.css
+++ b/styles/style.css
@@ -131,25 +131,22 @@
 }
 
 .section-title {
-  margin: 0;
+  margin: 100px auto 20px;
   padding: 0;
   max-width: 60%;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
-  margin: 100px auto 0;
   text-align: center;
 }
 
 .section-subtitle {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   max-width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: auto;
-  margin: 20px auto 0;
   text-align: center;
 }
 
@@ -165,6 +162,7 @@
 
 .table__cell {
   width: 250px;
+  margin: 60px 0 0 0;
 }
 
 .table__heading {
@@ -173,17 +171,14 @@
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  margin: 60px 0 0 0;
 }
 
 .table__text {
-  margin: 0;
+  margin: 20px 0 0 0;
   padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 20px;
-  margin-bottom: 0;
 }
 
 .feynman {
@@ -242,10 +237,12 @@
   color: white;
   position: relative;
   z-index: 3;
-  margin: 90px auto 0;
+  margin: 90px auto 20px;
 }
 
 .section-subtitle_theme_dark {
+  margin: 0 auto;
+  padding: 0;
   color: white;
   position: relative;
   z-index: 2;
@@ -262,14 +259,6 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
-}
-
-.table__heading_theme_dark {
-  margin-top: 0;
-}
-
-.table__text_theme_dark {
-  color: white;
 }
 
 .kaufman__triangle {
