--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -9,6 +18,12 @@
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+/* Анимация, блок rotation */
+.rotation {
+  animation: rotation 20s linear infinite;
+}
+
+/* Шапка сайта, блок header */
 .header {
   height: 100vh;
   min-height: 600px;
@@ -39,7 +54,7 @@
   margin-left: 64px;
   display: flex;
   align-items: center;
-  z-index: 3;
+  z-index: 2;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
@@ -52,7 +67,7 @@
   left: 64px;
   bottom: 30px;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
@@ -82,14 +97,22 @@
   top: 64px;
   right: 0;
   background-color: #2f80ed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   z-index: 0;
 }
 
+/* Секция, блок description */
+.description {
+  padding-top: 100px;
+}
+
 .two-columns {
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   max-width: 80%;
-  margin: 100px auto 0;
 }
 
 .two-columns__brief {
@@ -130,42 +153,38 @@
   margin: 0 0 0 0;
 }
 
-.section-title {
-  margin: 100px auto 20px;
-  padding: 0;
-  max-width: 60%;
-  line-height: 1.15;
-  font-size: 60px;
-  font-weight: 600;
-  text-align: center;
-}
-
-.section-subtitle {
+/* Секция, блок techniques */
+.techniques {
+  width: 80%;
+  padding-top: 100px;
   margin: 0 auto;
-  padding: 0;
-  max-width: 60%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
-  text-align: center;
 }
 
-.table {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  max-width: 1100px;
+.cards {
+  width: 920px;
   list-style: none;
   padding: 0;
-  margin: 0 auto 100px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 100px;
 }
 
-.table__cell {
-  width: 250px;
+.cards__item {
+  width: 240px;
+  text-align: center;
   margin: 60px 0 0 0;
 }
 
-.table__heading {
+.cards__image {
+  box-sizing: border-box;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  margin: 0 40px
+}
+
+.cards__title {
   margin: 0;
   padding: 0;
   line-height: 1.15;
@@ -173,14 +192,39 @@
   font-weight: 600;
 }
 
-.table__text {
-  margin: 20px 0 0 0;
+.cards__description {
+  margin: 16px 0 0;
   padding: 0;
-  line-height: 1.2;
+  line-height: 23px;
   font-size: 18px;
   font-weight: normal;
 }
 
+/* Секция, блок video */
+.video {
+  padding-top: 100px;
+}
+
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  margin: 50px auto -60px;
+  column-gap: 20px;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  border: 0;
+}
+
+/* Секция, блок oakley */
+.oakley {
+  background-color: #f2f2f2;
+  padding-top: 160px;
+}
+
+/* Секция, блок feynman */
 .feynman {
   min-height: 890px;
   position: relative;
@@ -194,12 +238,11 @@
 
 .feynman__title {
   margin: 0 auto 0;
-  padding: 0;
+  padding-top: 100px;
   max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  padding-top: 100px;
   text-align: center;
 }
 
@@ -225,29 +268,157 @@
   color: #2f80ed;
 }
 
+/* Секция, блок digits */
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.section-title {
+  margin: 0 auto 20px;
+  padding: 0;
+  max-width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.section-subtitle {
+  margin: 0 auto;
+  padding: 0;
+  max-width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.table {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  max-width: 1100px;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+}
+
+.table__heading {
+  margin: 0;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.table__text {
+  margin: 20px 0 0 0;
+  padding: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+/* Секция, блок khan */
+.khan {
+  background-color: #f2f2f2;
+  padding-top: 105px;
+}
+
+.khan__container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+  padding: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.khan__title {
+  margin: 0 0 50px;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+}
+
+.khan__quote {
+  width: 790px;
+  margin: 0 0 36px;
+  padding: 0;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__quote-author {
+  margin: 0 0 10px;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.khan__quote-author-subline {
+  margin: 0 0 68px;
+  padding: 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.khan__book-container {
+  display: flex;
+}
+
+.khan__book-pic {
+  width: 620px;
+  height: 608px;
+  object-fit: cover;
+  object-position: top;
+  margin-right: 48px;
+}
+
+.khan__buy-link {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+/* Секция, блок kaufman */
 .kaufman {
   position: relative;
   overflow: hidden;
   background-color: #1f1f1f;
+  padding-top: 90px;
+  padding-bottom: 90px;
 }
 
 .section-title_theme_dark {
   color: white;
   position: relative;
   z-index: 3;
-  margin: 90px auto 20px;
 }
 
 .section-subtitle_theme_dark {
-  margin: 0 auto;
-  padding: 0;
   color: white;
   position: relative;
   z-index: 2;
 }
 
 .table_theme_dark {
-  margin-bottom: 90px;
   position: relative;
   z-index: 1;
 }
@@ -272,6 +443,25 @@
   z-index: 0;
 }
 
+/* Секция, блок resources */
+.resources {
+  padding-top: 100px;
+  padding-bottom: 217px;
+}
+
+.resources__logo-zone {
+  display: flex;
+  justify-content: space-between;
+  width: 1100px;
+  margin: 80px auto 0;
+}
+
+.resources__logo {
+  width: 270px;
+  height: 38px;
+}
+
+/* Секция, блок footer */
 .footer {
   background-color: #1f1f1f;
   color: white;
