--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,16 @@
   animation: rotation 20s linear infinite;
 }
 
+/* Все ссылки на странице при наведении мыши должны плавно становиться немного прозрачными, подберите opacity и transition на свой вкус*/
+.link {
+  opacity: 1;
+}
+
+.link:hover {
+  opacity: .5;
+  transition: 1s;
+}
+
 /* Шапка сайта, блок header */
 .header {
   height: 100vh;
@@ -105,11 +115,13 @@
 
 /* Секция, блок description */
 .description {
-  padding-top: 100px;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .two-columns {
-  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   max-width: 80%;
@@ -156,8 +168,8 @@
 /* Секция, блок techniques */
 .techniques {
   width: 80%;
-  padding-top: 100px;
   margin: 0 auto;
+  padding-top: 100px;
 }
 
 .cards {
@@ -173,7 +185,6 @@
 .cards__item {
   width: 240px;
   text-align: center;
-  margin: 60px 0 0 0;
 }
 
 .cards__image {
@@ -181,7 +192,7 @@
   border-radius: 50%;
   width: 160px;
   height: 160px;
-  margin: 0 40px
+  margin: 60px 40px 43px;
 }
 
 .cards__title {
@@ -202,13 +213,13 @@
 
 /* Секция, блок video */
 .video {
-  padding-top: 100px;
+  margin-top: 100px;
 }
 
 .video__iframes {
   display: flex;
   justify-content: center;
-  margin: 50px auto -60px;
+  margin: 50px auto -50px;
   column-gap: 20px;
 }
 
@@ -220,8 +231,11 @@
 
 /* Секция, блок oakley */
 .oakley {
-  background-color: #f2f2f2;
   padding-top: 160px;
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Секция, блок feynman */
@@ -237,7 +251,7 @@
 }
 
 .feynman__title {
-  margin: 0 auto 0;
+  margin: 0 auto;
   padding-top: 100px;
   max-width: 648px;
   line-height: 1.15;
@@ -270,8 +284,7 @@
 
 /* Секция, блок digits */
 .digits {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  margin: 100px auto 100px;
 }
 
 .section-title {
@@ -390,6 +403,8 @@
 }
 
 .khan__buy-link {
+  margin: 0;
+  padding: 0;
   line-height: 42px;
   font-size: 30px;
   font-weight: normal;
@@ -445,13 +460,11 @@
 
 /* Секция, блок resources */
 .resources {
-  padding-top: 100px;
-  padding-bottom: 217px;
+  margin-top: 100px;
+  margin-bottom: 217px;
 }
 
 .resources__logo-zone {
-  display: flex;
-  justify-content: space-between;
   width: 1100px;
   margin: 80px auto 0;
 }
@@ -523,8 +536,6 @@
 }
 
 .footer__column-link {
-  margin: 0;
-  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
